// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Different ways to make an equation All Text in constructor with all options 1`] = `
FigureElementPrimitiveGLText {
  "_custom": Object {},
  "adjustments": Object {
    "ascent": 0,
    "descent": 0,
    "width": 0,
  },
  "afterDrawCallback": null,
  "angleToDraw": -1,
  "animationFinishedCallback": null,
  "animations": AnimationManager {
    "animationSpeed": 1,
    "animations": Array [],
    "customSteps": Array [],
    "element": [Circular],
    "finishedCallback": [Function],
    "fnMap": FunctionMap {
      "global": GlobalFunctionMap {
        "map": Object {},
      },
      "map": Object {},
    },
    "notifications": NotificationManager {
      "fnMap": FunctionMap {
        "global": GlobalFunctionMap {
          "map": Object {},
        },
        "map": Object {},
      },
      "notifications": Object {},
    },
    "options": Object {
      "translation": Object {},
    },
    "recorder": undefined,
    "state": "idle",
    "timeKeeper": TimeKeeper {
      "animateOnFrame": false,
      "drawQueue": Array [],
      "idCounter": 0,
      "lastDrawTime": null,
      "lastTime": 3000,
      "manual": false,
      "nextDrawQueue": Array [],
      "nowTime": 3000,
      "requestNextAnimationFrame": [MockFunction] {
        "calls": Array [
          Array [
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "speed": 1,
      "syncNowTimeout": 100,
      "timeoutId": null,
      "timers": Object {},
      "updateSyncNow": true,
    },
  },
  "atlas": Object {
    "font": Object {
      "getFontID": [Function],
      "getTextureID": [Function],
    },
    "fontSize": 80,
    "map": Object {
      " ": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "!": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "\\"": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "#": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "$": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "%": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "&": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "'": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "(": Object {
        "ascent": 56,
        "descent": 20,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      ")": Object {
        "ascent": 56,
        "descent": 20,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "*": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "+": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      ",": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "-": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      ".": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "/": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "0": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "1": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "2": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "3": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "4": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "5": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "6": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "7": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "8": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "9": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      ":": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      ";": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "<": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "=": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      ">": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "?": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "@": Object {
        "ascent": 56,
        "descent": 20,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "A": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "B": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "C": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "D": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "E": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "F": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "G": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "H": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "I": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "J": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "K": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "L": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "M": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "N": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "O": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "P": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "Q": Object {
        "ascent": 56,
        "descent": 20,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "R": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "S": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "T": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "U": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "V": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "W": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "X": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "Y": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "Z": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "[": Object {
        "ascent": 56,
        "descent": 20,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "]": Object {
        "ascent": 56,
        "descent": 20,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "^": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "_": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "a": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "b": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "c": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "d": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "e": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "f": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "g": Object {
        "ascent": 38,
        "descent": 20,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "h": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "i": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "j": Object {
        "ascent": 56,
        "descent": 20,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "k": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "l": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "m": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "n": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "o": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "p": Object {
        "ascent": 38,
        "descent": 20,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "q": Object {
        "ascent": 38,
        "descent": 20,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "r": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "s": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "t": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "u": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "v": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "w": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "x": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "y": Object {
        "ascent": 38,
        "descent": 20,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "z": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "{": Object {
        "ascent": 56,
        "descent": 20,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "|": Object {
        "ascent": 56,
        "descent": 20,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "}": Object {
        "ascent": 56,
        "descent": 20,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "°": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "º": Object {
        "ascent": 56,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "×": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "÷": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "→": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
      "−": Object {
        "ascent": 38,
        "descent": 3.2,
        "offsetX": 40,
        "offsetY": 40,
        "width": 40,
      },
    },
    "notifications": Object {
      "add": [Function],
    },
  },
  "atlasNotificationsID": undefined,
  "beforeDrawCallback": null,
  "border": "draw",
  "cancelSetTransform": false,
  "cannotTouchHole": false,
  "color": Array [
    0.95,
    0,
    0,
    1,
  ],
  "copyTransforms": Array [],
  "custom": Object {
    "getUniform": [Function],
    "updateAttribute": [Function],
    "updateUniform": [Function],
    "updateVertices": [Function],
  },
  "customState": Object {},
  "defaultColor": Array [
    0.95,
    0,
    0,
    1,
  ],
  "dependantTransform": false,
  "dimColor": Array [
    0.5,
    0.5,
    0.5,
    1,
  ],
  "drawBorder": Array [
    Array [
      Point {
        "_type": "point",
        "x": 0,
        "y": -0.008,
        "z": 0,
      },
      Point {
        "_type": "point",
        "x": 0.1,
        "y": -0.008,
        "z": 0,
      },
      Point {
        "_type": "point",
        "x": 0.1,
        "y": 0.095,
        "z": 0,
      },
      Point {
        "_type": "point",
        "x": 0,
        "y": 0.095,
        "z": 0,
      },
    ],
  ],
  "drawBorderBuffer": Array [
    Array [
      Point {
        "_type": "point",
        "x": 0,
        "y": -0.008,
        "z": 0,
      },
      Point {
        "_type": "point",
        "x": 0.1,
        "y": -0.008,
        "z": 0,
      },
      Point {
        "_type": "point",
        "x": 0.1,
        "y": 0.095,
        "z": 0,
      },
      Point {
        "_type": "point",
        "x": 0,
        "y": 0.095,
        "z": 0,
      },
    ],
  ],
  "drawNumber": 0,
  "drawPriority": 1,
  "drawTransforms": Array [],
  "drawingObject": GLObject {
    "attributes": Object {
      "a_vertex": Object {
        "buffer": undefined,
        "data": Array [
          -0.05,
          -0.008,
          0.15000000000000002,
          -0.008,
          0.15000000000000002,
          0.095,
          -0.05,
          -0.008,
          0.15000000000000002,
          0.095,
          -0.05,
          0.095,
        ],
        "normalize": false,
        "offset": 0,
        "size": 2,
        "stride": 0,
        "type": undefined,
        "usage": undefined,
      },
    },
    "fragmentShader": Object {
      "color": "textureAlpha",
    },
    "gl": Object {
      "TRIANGLES": 1,
      "TRIANGLE_STRIP": 2,
      "activeTexture": [Function],
      "bindBuffer": [Function],
      "bindFramebuffer": [Function],
      "bindTexture": [Function],
      "blendFunc": [Function],
      "bufferData": [Function],
      "canvas": Object {
        "clientHeight": 500,
        "clientWidth": 1000,
        "getBoundingClientRect": [Function],
        "height": 500,
        "left": 100,
        "offsetHeight": 500,
        "offsetWidth": 1000,
        "scrollLeft": 0,
        "scrollTop": 0,
        "top": 200,
        "width": 1000,
      },
      "clear": [Function],
      "clearColor": [Function],
      "createBuffer": [Function],
      "createTexture": [Function],
      "deleteBuffer": [Function],
      "disable": [Function],
      "disableVertexAttribArray": [Function],
      "drawArrays": [Function],
      "enable": [Function],
      "enableVertexAttribArray": [Function],
      "pixelStorei": [Function],
      "readPixels": [Function],
      "texImage2D": [Function],
      "uniform1f": [Function],
      "uniform1i": [Function],
      "uniform4f": [Function],
      "uniformMatrix3fv": [MockFunction],
      "uniformMatrix4fv": [MockFunction] {
        "calls": Array [
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.18000000000000002,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1,
              0,
              0,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.1,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.30000000000000004,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.18000000000000002,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.0199999880000052,
              0,
              0,
              0,
              0,
              1.0199999880000052,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.07200001679999272,
              -0.05039997312000963,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.30000000000000004,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.18000000000000002,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.0999999500000124,
              0,
              0,
              0,
              0,
              1.0999999500000124,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.03999993000001749,
              -0.139999999999965,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.30000000000000004,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.18000000000000002,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.1799999639999892,
              0,
              0,
              0,
              0,
              1.1799999639999892,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.15199994959998486,
              -0.05040008064000608,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.30000000000000004,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.18000000000000002,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.18000000000000002,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.30000000000000004,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.18000000000000002,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1,
              0,
              0,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.1,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.30000000000000004,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.18000000000000002,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.019999952000083,
              0,
              0,
              0,
              0,
              1.019999952000083,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.07200006719988353,
              -0.05039989248015412,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.30000000000000004,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.18000000000000002,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.0999998000002,
              0,
              0,
              0,
              0,
              1.0999998000002,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.039999720000280015,
              -0.13999999999944004,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.30000000000000004,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.18000000000000002,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.1799998559998273,
              0,
              0,
              0,
              0,
              1.1799998559998273,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.1519997983997581,
              -0.05040032256009673,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.30000000000000004,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.18000000000000002,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.18000000000000002,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.30000000000000004,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.18000000000000002,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1,
              0,
              0,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.1,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.30000000000000004,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.18000000000000002,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.0199999760000207,
              0,
              0,
              0,
              0,
              1.0199999760000207,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.07200003359997088,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.30000000000000004,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.18000000000000002,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.09999990000005,
              0,
              0,
              0,
              0,
              1.09999990000005,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.03999986000007,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.30000000000000004,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.18000000000000002,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.1799999279999567,
              0,
              0,
              0,
              0,
              1.1799999279999567,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.15199989919993953,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.30000000000000004,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.18000000000000002,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.18000000000000002,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.30000000000000004,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              -0.18000000000000002,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.18000000000000002,
              0,
              0,
              1,
            ],
          ],
          Array [
            "",
            false,
            Array [
              1.2,
              0,
              0,
              0,
              0,
              1.2,
              0,
              0,
              0,
              0,
              -0.20202020202020202,
              0,
              0.30000000000000004,
              0,
              0,
              1,
            ],
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "vertexAttribPointer": [Function],
      "viewport": [Function],
    },
    "glPrimitive": 1,
    "location": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": 0,
    },
    "numVertices": 6,
    "onLoad": null,
    "points": Array [
      -0.05,
      -0.008,
      0.15000000000000002,
      -0.008,
      0.15000000000000002,
      0.095,
      -0.05,
      -0.008,
      0.15000000000000002,
      0.095,
      -0.05,
      0.095,
    ],
    "programIndex": undefined,
    "selectorFragmentShader": "selector",
    "selectorProgramIndex": undefined,
    "selectorVertexShader": "selector",
    "texture": Object {
      "buffer": undefined,
      "data": null,
      "id": "1",
      "loadColor": Array [
        0,
        0,
        1,
        0.5,
      ],
      "mapFrom": Rect {
        "bottom": 0,
        "height": 1,
        "left": 0,
        "right": 1,
        "top": 1,
        "width": 1,
      },
      "mapTo": Rect {
        "bottom": -1,
        "height": 2,
        "left": -1,
        "right": 1,
        "top": 1,
        "width": 2,
      },
      "mapToBuffer": "a_vertex",
      "points": Array [
        NaN,
        NaN,
        NaN,
        NaN,
        NaN,
        NaN,
        NaN,
        NaN,
        NaN,
        NaN,
        NaN,
        NaN,
      ],
      "repeat": false,
      "src": "1",
      "type": "image",
    },
    "type": "glPrimitive",
    "uniforms": Object {},
    "vertexShader": Object {
      "color": "texture",
      "dimension": 2,
    },
    "webgl": Object {
      "addTexture": [Function],
      "getAtlas": [Function],
      "getProgram": [Function],
      "gl": Object {
        "TRIANGLES": 1,
        "TRIANGLE_STRIP": 2,
        "activeTexture": [Function],
        "bindBuffer": [Function],
        "bindFramebuffer": [Function],
        "bindTexture": [Function],
        "blendFunc": [Function],
        "bufferData": [Function],
        "canvas": Object {
          "clientHeight": 500,
          "clientWidth": 1000,
          "getBoundingClientRect": [Function],
          "height": 500,
          "left": 100,
          "offsetHeight": 500,
          "offsetWidth": 1000,
          "scrollLeft": 0,
          "scrollTop": 0,
          "top": 200,
          "width": 1000,
        },
        "clear": [Function],
        "clearColor": [Function],
        "createBuffer": [Function],
        "createTexture": [Function],
        "deleteBuffer": [Function],
        "disable": [Function],
        "disableVertexAttribArray": [Function],
        "drawArrays": [Function],
        "enable": [Function],
        "enableVertexAttribArray": [Function],
        "pixelStorei": [Function],
        "readPixels": [Function],
        "texImage2D": [Function],
        "uniform1f": [Function],
        "uniform1i": [Function],
        "uniform4f": [Function],
        "uniformMatrix3fv": [MockFunction],
        "uniformMatrix4fv": [MockFunction] {
          "calls": Array [
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.18000000000000002,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1,
                0,
                0,
                0,
                0,
                1,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.1,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.30000000000000004,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.18000000000000002,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.0199999880000052,
                0,
                0,
                0,
                0,
                1.0199999880000052,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.07200001679999272,
                -0.05039997312000963,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.30000000000000004,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.18000000000000002,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.0999999500000124,
                0,
                0,
                0,
                0,
                1.0999999500000124,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.03999993000001749,
                -0.139999999999965,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.30000000000000004,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.18000000000000002,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.1799999639999892,
                0,
                0,
                0,
                0,
                1.1799999639999892,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.15199994959998486,
                -0.05040008064000608,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.30000000000000004,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.18000000000000002,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.18000000000000002,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.30000000000000004,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.18000000000000002,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1,
                0,
                0,
                0,
                0,
                1,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.1,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.30000000000000004,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.18000000000000002,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.019999952000083,
                0,
                0,
                0,
                0,
                1.019999952000083,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.07200006719988353,
                -0.05039989248015412,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.30000000000000004,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.18000000000000002,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.0999998000002,
                0,
                0,
                0,
                0,
                1.0999998000002,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.039999720000280015,
                -0.13999999999944004,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.30000000000000004,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.18000000000000002,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.1799998559998273,
                0,
                0,
                0,
                0,
                1.1799998559998273,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.1519997983997581,
                -0.05040032256009673,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.30000000000000004,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.18000000000000002,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.18000000000000002,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.30000000000000004,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.18000000000000002,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1,
                0,
                0,
                0,
                0,
                1,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.1,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.30000000000000004,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.18000000000000002,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.0199999760000207,
                0,
                0,
                0,
                0,
                1.0199999760000207,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.07200003359997088,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.30000000000000004,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.18000000000000002,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.09999990000005,
                0,
                0,
                0,
                0,
                1.09999990000005,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.03999986000007,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.30000000000000004,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.18000000000000002,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.1799999279999567,
                0,
                0,
                0,
                0,
                1.1799999279999567,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.15199989919993953,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.30000000000000004,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.18000000000000002,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.18000000000000002,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.30000000000000004,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                -0.18000000000000002,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.18000000000000002,
                0,
                0,
                1,
              ],
            ],
            Array [
              "",
              false,
              Array [
                1.2,
                0,
                0,
                0,
                0,
                1.2,
                0,
                0,
                0,
                0,
                -0.20202020202020202,
                0,
                0.30000000000000004,
                0,
                0,
                1,
              ],
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "vertexAttribPointer": [Function],
        "viewport": [Function],
      },
      "lastUsedProgram": null,
      "locations": Object {
        "a_vertex": "",
      },
      "programs": Array [],
      "resize": [Function],
      "targetTexture": Object {
        "fb": null,
      },
      "textures": Object {
        "1": Object {
          "index": 1,
        },
      },
      "useProgram": [Function],
    },
    "z": 0,
  },
  "fnMap": FunctionMap {
    "global": GlobalFunctionMap {
      "map": Object {},
    },
    "map": Object {
      "_elementPulseSettingsTransformMethod": Object {
        "fn": [Function],
      },
      "tools.math.easeinout": Object {
        "fn": [Function],
      },
      "tools.math.linear": Object {
        "fn": [Function],
      },
      "tools.math.sinusoid": Object {
        "fn": [Function],
      },
      "tools.math.sinusoidAbs": Object {
        "fn": [Function],
      },
      "tools.math.triangle": Object {
        "fn": [Function],
      },
    },
  },
  "font": FigureFont {
    "atlasColor": false,
    "atlasSize": undefined,
    "color": Array [
      0.95,
      0,
      0,
      1,
    ],
    "descent": 0.08,
    "family": "Times New Roman",
    "glyphs": "mathlatin",
    "id": undefined,
    "loadColor": Array [
      0,
      0,
      0,
      0,
    ],
    "map": Object {},
    "maxAscent": 1.5,
    "maxCount": 1,
    "maxDescent": 0.5,
    "midAscent": 1.1,
    "midDescent": 0.2,
    "modifiers": Object {},
    "mods": Object {
      " ": Object {
        "a": 1.1,
        "d": 0.08,
        "w": 1,
      },
      "$": Object {
        "a": 1.5,
        "d": 0.2,
        "w": 1,
      },
      "(": Object {
        "a": 1.5,
        "d": 0.5,
        "w": 1,
      },
      ")": Object {
        "a": 1.5,
        "d": 0.5,
        "w": 1,
      },
      "*": Object {
        "a": 1.1,
        "d": 0.08,
        "w": 1,
      },
      ",": Object {
        "a": 1.1,
        "d": 0.2,
        "w": 1,
      },
      "-": Object {
        "a": 1.1,
        "d": 0.08,
        "w": 1,
      },
      ":": Object {
        "a": 1.1,
        "d": 0.08,
        "w": 1,
      },
      ";": Object {
        "a": 1.1,
        "d": 0.2,
        "w": 1,
      },
      "@": Object {
        "a": 1.5,
        "d": 0.5,
        "w": 1,
      },
      "Q": Object {
        "a": 1.5,
        "d": 0.5,
        "w": 1,
      },
      "[": Object {
        "a": 1.5,
        "d": 0.5,
        "w": 1,
      },
      "]": Object {
        "a": 1.5,
        "d": 0.5,
        "w": 1,
      },
      "a": Object {
        "a": 1.1,
        "d": 0.08,
        "w": 1,
      },
      "c": Object {
        "a": 1.1,
        "d": 0.08,
        "w": 1,
      },
      "e": Object {
        "a": 1.1,
        "d": 0.08,
        "w": 1,
      },
      "f": Object {
        "a": 1.5,
        "d": 0.5,
        "w": 1.3,
      },
      "g": Object {
        "a": 1.1,
        "d": 0.5,
        "w": 1,
      },
      "j": Object {
        "a": 1.5,
        "d": 0.5,
        "w": 1,
      },
      "m": Object {
        "a": 1.1,
        "d": 0.08,
        "w": 1,
      },
      "n": Object {
        "a": 1.1,
        "d": 0.08,
        "w": 1,
      },
      "o": Object {
        "a": 1.1,
        "d": 0.08,
        "w": 1,
      },
      "p": Object {
        "a": 1.1,
        "d": 0.5,
        "w": 1,
      },
      "q": Object {
        "a": 1.1,
        "d": 0.5,
        "w": 1,
      },
      "r": Object {
        "a": 1.1,
        "d": 0.08,
        "w": 1,
      },
      "s": Object {
        "a": 1.1,
        "d": 0.08,
        "w": 1,
      },
      "u": Object {
        "a": 1.1,
        "d": 0.08,
        "w": 1,
      },
      "v": Object {
        "a": 1.1,
        "d": 0.08,
        "w": 1,
      },
      "w": Object {
        "a": 1.1,
        "d": 0.08,
        "w": 1,
      },
      "x": Object {
        "a": 1.1,
        "d": 0.08,
        "w": 1,
      },
      "y": Object {
        "a": 1.1,
        "d": 0.5,
        "w": 1,
      },
      "z": Object {
        "a": 1.1,
        "d": 0.08,
        "w": 1,
      },
      "{": Object {
        "a": 1.5,
        "d": 0.5,
        "w": 1,
      },
      "|": Object {
        "a": 1.5,
        "d": 0.5,
        "w": 1,
      },
      "}": Object {
        "a": 1.5,
        "d": 0.5,
        "w": 1,
      },
    },
    "opacity": 1,
    "outline": Object {
      "fill": true,
      "width": 0,
    },
    "size": 0.2,
    "src": undefined,
    "style": "italic",
    "testString": "mathlatin",
    "timeout": 5,
    "underline": false,
    "weight": "200",
  },
  "frozenPulseTransforms": Array [],
  "interactiveLocation": Point {
    "_type": "point",
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "internalSetTransformCallback": null,
  "isInteractive": undefined,
  "isMovable": false,
  "isRenderedAsImage": false,
  "isShown": true,
  "isTouchable": false,
  "lastDrawOpacity": 1,
  "lastDrawPulseTransform": Transform {
    "_type": "transform",
    "def": Array [
      Array [
        "s",
        1,
        1,
        1,
      ],
      Array [
        "r",
        0,
        0,
        0,
        1,
      ],
      Array [
        "t",
        0,
        0,
        0,
      ],
    ],
    "mat": Array [
      1,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      1,
    ],
  },
  "lastDrawTime": 0,
  "lengthToDraw": -1,
  "location": Array [
    Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": 0,
    },
  ],
  "measure": Object {
    "ascent": 0.095,
    "border": Array [
      Array [
        Point {
          "_type": "point",
          "x": 0,
          "y": -0.008,
          "z": 0,
        },
        Point {
          "_type": "point",
          "x": 0.1,
          "y": -0.008,
          "z": 0,
        },
        Point {
          "_type": "point",
          "x": 0.1,
          "y": 0.095,
          "z": 0,
        },
        Point {
          "_type": "point",
          "x": 0,
          "y": 0.095,
          "z": 0,
        },
      ],
    ],
    "bottom": -0.008,
    "descent": 0.008,
    "left": 0,
    "right": 0.1,
    "top": 0.095,
    "width": 0.1,
  },
  "move": Object {
    "bounds": null,
    "element": null,
    "freely": Object {
      "bounceLoss": 0.5,
      "callback": null,
      "deceleration": 5,
      "zeroVelocityThreshold": 0.0001,
    },
    "maxVelocity": 5,
    "plane": Plane {
      "n": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": 1,
      },
      "p": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": 0,
      },
    },
    "type": "translation",
  },
  "moveSetTransform": false,
  "name": "a",
  "notifications": NotificationManager {
    "fnMap": FunctionMap {
      "global": GlobalFunctionMap {
        "map": Object {},
      },
      "map": Object {
        "_elementPulseSettingsTransformMethod": Object {
          "fn": [Function],
        },
        "tools.math.easeinout": Object {
          "fn": [Function],
        },
        "tools.math.linear": Object {
          "fn": [Function],
        },
        "tools.math.sinusoid": Object {
          "fn": [Function],
        },
        "tools.math.sinusoidAbs": Object {
          "fn": [Function],
        },
        "tools.math.triangle": Object {
          "fn": [Function],
        },
      },
    },
    "notifications": Object {},
  },
  "onAdd": null,
  "onClick": null,
  "opacity": 1,
  "parent": null,
  "parentTransform": Array [
    Transform {
      "_type": "transform",
      "def": Array [],
      "mat": Array [
        1,
        0,
        0,
        0,
        0,
        1,
        0,
        0,
        0,
        0,
        1,
        0,
        0,
        0,
        0,
        1,
      ],
    },
  ],
  "pointsDefinition": Object {},
  "pointsToDraw": -1,
  "pulseDefault": Object {
    "angle": 0,
    "centerOn": "this",
    "done": null,
    "duration": 1,
    "frequency": 0,
    "num": 1,
    "progression": "sinusoid",
    "rotation": null,
    "scale": 2,
    "space": "figure",
    "translation": null,
    "when": "syncNow",
    "xAlign": "center",
    "yAlign": "middle",
  },
  "pulseSettings": Object {
    "A": 1,
    "B": 0.5,
    "C": 0,
    "allowFreezeOnStop": false,
    "callback": [Function],
    "delta": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": 0,
    },
    "frequency": 0.5,
    "num": 1,
    "progression": "tools.math.sinusoid",
    "time": 1,
    "transformMethod": "_elementPulseSettingsTransformMethod",
    "type": "scale",
  },
  "pulseTransforms": Array [],
  "recorder": Recorder {
    "audio": null,
    "currentTime": 0,
    "duration": 0,
    "eventIndex": Object {
      "_autoCursor": -1,
      "_autoCursorMove": -1,
      "_autoExec": -1,
      "_autoTouch": -1,
      "_autoTouchElement": -1,
      "cursor": -1,
      "cursorMove": -1,
      "exec": -1,
      "touch": -1,
      "touchElement": -1,
    },
    "events": Object {
      "_autoCursor": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "_autoCursorMove": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "_autoExec": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "_autoTouch": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "_autoTouchElement": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "cursor": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "cursorMove": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "exec": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "touch": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "touchElement": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
    },
    "eventsCache": Object {},
    "eventsToPlay": Array [],
    "figure": null,
    "isAudioPlaying": false,
    "lastRecordTime": null,
    "lastRecordTimeCount": 0,
    "lastSeekTime": null,
    "notifications": NotificationManager {
      "fnMap": FunctionMap {
        "global": GlobalFunctionMap {
          "map": Object {},
        },
        "map": Object {},
      },
      "notifications": Object {},
    },
    "pauseState": null,
    "precision": 8,
    "queueSeekId": null,
    "queueSeekTime": 0,
    "reference": "__base",
    "referenceIndex": 0,
    "settings": Object {
      "pause": "freeze",
      "play": "instant",
    },
    "state": "idle",
    "stateIndex": -1,
    "stateTimeStep": 1,
    "states": ObjectTracker {
      "baseReference": null,
      "diffs": Array [],
      "lastReferenceName": "__base",
      "precision": 8,
      "references": Object {},
    },
    "statesCache": ObjectTracker {
      "baseReference": null,
      "diffs": Array [],
      "lastReferenceName": "__base",
      "precision": 8,
      "references": Object {},
    },
    "timeKeeper": TimeKeeper {
      "animateOnFrame": false,
      "animationId": undefined,
      "drawQueue": Array [],
      "idCounter": 0,
      "lastDrawTime": null,
      "lastTime": 3000,
      "manual": false,
      "nextDrawQueue": Array [],
      "nowTime": 3000,
      "requestNextAnimationFrame": [MockFunction] {
        "calls": Array [
          Array [
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "speed": 1,
      "syncNowTimeout": 100,
      "timeoutId": null,
      "timers": Object {},
      "updateSyncNow": true,
    },
    "timeUpdates": 100,
    "timeUpdatesTimeoutID": null,
    "timeoutID": null,
    "videoToNowDelta": 0,
    "worker": null,
  },
  "renderedOnNextDraw": false,
  "scenarios": Object {},
  "scene": Scene {
    "aspectRatio": 0,
    "bottom": -1,
    "camera": Object {
      "lookAt": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": 0,
      },
      "position": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": 2,
      },
      "up": Point {
        "_type": "point",
        "x": 0,
        "y": 1,
        "z": 0,
      },
    },
    "cameraMatrix": Array [
      1,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      1,
      2,
      0,
      0,
      0,
      1,
    ],
    "cameraPosition": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": 2,
    },
    "cameraVector": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": -1,
    },
    "far": 10,
    "farCenter": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": -8,
    },
    "farPlane": Plane {
      "n": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": -1,
      },
      "p": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": -8,
      },
    },
    "fieldOfView": 0.47123889803846897,
    "heightFar": 2,
    "heightNear": 2,
    "inverseViewProjectionMatrix": Array [
      1,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      -0,
      -0,
      -4.95,
      -3.05,
      0,
      0,
      0,
      1,
    ],
    "left": -1,
    "light": Object {
      "ambient": 0.4,
      "directional": Point {
        "_type": "point",
        "x": 1,
        "y": 1,
        "z": 1,
      },
      "point": Point {
        "_type": "point",
        "x": 10,
        "y": 10,
        "z": 10,
      },
    },
    "near": 0.1,
    "nearCenter": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": 1.9,
    },
    "nearPlane": Plane {
      "n": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": -1,
      },
      "p": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": 1.9,
      },
    },
    "onUpdate": null,
    "pan": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": 0,
    },
    "pannedCameraPosition": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": 2,
    },
    "pannedLookAt": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": 0,
    },
    "projectionMatrix": Array [
      1,
      0,
      0,
      -0,
      0,
      1,
      0,
      -0,
      0,
      0,
      -0.20202020202020202,
      -1.02020202020202,
      0,
      0,
      0,
      1,
    ],
    "right": 1,
    "rightVector": Point {
      "_type": "point",
      "x": 1,
      "y": -0,
      "z": 0,
    },
    "style": "2D",
    "top": 1,
    "upVector": Point {
      "_type": "point",
      "x": 0,
      "y": 1,
      "z": 0,
    },
    "viewMatrix": Array [
      1,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      1,
      -2,
      0,
      0,
      0,
      1,
    ],
    "viewProjectionMatrix": Array [
      1,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      -0.20202020202020202,
      0,
      0,
      0,
      0,
      1,
    ],
    "widthFar": 2,
    "widthNear": 2,
    "zoom": 1,
  },
  "setPointsFromDefinition": null,
  "setTransformCallback": null,
  "simple": false,
  "state": Object {
    "isBeingMoved": false,
    "isChanging": false,
    "isMovingFreely": false,
    "isPulsing": false,
    "movement": Object {
      "previousTime": null,
      "velocity": 0,
    },
    "preparingToStop": false,
    "pulse": Object {
      "startTime": null,
    },
  },
  "stateProperties": Array [],
  "text": Array [
    "a",
  ],
  "tieToHTML": Object {
    "element": null,
    "scale": "fit",
    "updateOnResize": true,
  },
  "timeKeeper": TimeKeeper {
    "animateOnFrame": false,
    "animationId": undefined,
    "drawQueue": Array [],
    "idCounter": 0,
    "lastDrawTime": null,
    "lastTime": 3000,
    "manual": false,
    "nextDrawQueue": Array [],
    "nowTime": 3000,
    "requestNextAnimationFrame": [MockFunction] {
      "calls": Array [
        Array [
          [Function],
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "speed": 1,
    "syncNowTimeout": 100,
    "timeoutId": null,
    "timers": Object {},
    "updateSyncNow": true,
  },
  "touchBorder": "buffer",
  "touchScale": Point {
    "_type": "point",
    "x": 1,
    "y": 1,
    "z": 1,
  },
  "transform": Transform {
    "_type": "transform",
    "def": Array [
      Array [
        "s",
        0.45,
        0.45,
        1,
      ],
      Array [
        "r",
        0,
        0,
        0,
        1,
      ],
      Array [
        "t",
        1.865,
        1.937,
        0,
      ],
    ],
    "mat": Array [
      0.45,
      0,
      0,
      1.865,
      0,
      0.45,
      0,
      1.937,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      1,
    ],
  },
  "type": "primitive",
  "uid": "0000000000",
  "uniqueColor": null,
  "unrenderNextDraw": false,
  "xAlign": "left",
  "yAlign": "baseline",
}
`;

exports[`Different ways to make an equation Separate All Text 1`] = `
Array [
  0.7,
  0,
  0,
  0.035,
  0,
  0.7,
  0,
  0.0996,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Different ways to make an equation Separate All Text 2`] = `
Array [
  0.7,
  0,
  0,
  0.035,
  0,
  0.7,
  0,
  -0.084,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Different ways to make an equation Separate All Text 3`] = `
Array [
  0.14,
  0,
  0,
  0,
  0,
  0.01,
  0,
  0.049,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Different ways to make an equation Separate All Text 4`] = `
Array [
  0.7,
  0,
  0,
  0.14,
  0,
  0.7,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;
